--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
       const el = document.getElementById('h5p-container');
       const options = {
-        // Path to the content folder must point exactly to 'workspace'
+        // Path to the content folder must point exactly to 'workspace/content'
         h5pJsonPath:   'workspace', 
         librariesPath: 'workspace/libraries',
         frameJs:       'dist/frame.bundle.js', 
