--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         // Path to the content folder must point exactly to 'workspace'
         h5pJsonPath:   'workspace', 
         librariesPath: 'workspace/libraries',
-	contentPath:   'workspace/content/images', 'workspace/content/videos', 'workspace/content/audios',
+	imagesPath:    'workspace/content/images', 
+	audiosPath:    'workspace/content/audios',
+	videosPath:    'workspace/content/videos'
         frameJs:       'dist/frame.bundle.js', 
         frameCss:      'dist/styles/h5p.css', 
       }
