--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         librariesPath: 'workspace/libraries',
 	imagesPath:    'workspace/content/images', 
 	audiosPath:    'workspace/content/audios',
-	videosPath:    'workspace/content/videos'
+	videosPath:    'workspace/content/videos',
         frameJs:       'dist/frame.bundle.js', 
         frameCss:      'dist/styles/h5p.css', 
       }
