--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         // Path to the content folder must point exactly to 'workspace'
         h5pJsonPath:   'workspace', 
         librariesPath: 'workspace/libraries',
-	imagesPath:    'workspace/content/images', 
-	audiosPath:    'workspace/content/audios',
-	videosPath:    'workspace/content/videos',
+	contentJsonPath: 'workspace/content',
         frameJs:       'dist/frame.bundle.js', 
         frameCss:      'dist/styles/h5p.css', 
       }
