content location change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         // Path to the content folder must point exactly to 'workspace'
         h5pJsonPath:   'workspace', 
         librariesPath: 'workspace/libraries',
-	contentJsonPath: 'workspace/content',
+	contentPath:   'workspace/content',
         frameJs:       'dist/frame.bundle.js', 
         frameCss:      'dist/styles/h5p.css', 
       }
