--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <script type="text/javascript">
       const el = document.getElementById('h5p-container');
       const options = {
-        // Path to the content folder must point exactly to 'truth-seeker'
+        // Path to the content folder must point exactly to 'workspace'
         h5pJsonPath:   'workspace', 
         librariesPath: 'workspace/libraries',
-	contentPath:   'workspace/content',
         frameJs:       'dist/frame.bundle.js', 
         frameCss:      'dist/styles/h5p.css', 
       }
